[tool.poetry]
name = "cipher_qg2196"
version = "0.1.0"
description = "We add cipher function into this package"
authors = ["Qianrun Guo <qg2196@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
